# palindrome_repository

./: .gitignore  README.md  index.ts  searcher.ts
palindrom_wasm/: Cargo.toml
palindrom_wasm/deno_wasm/: palindrom_wasm.d.ts  palindrom_wasm.js  palindrom_wasm_bg.wasm  palindrom_wasm_bg.wasm.d.ts
palindrom_wasm/src/: lib.rs
