[package]
name = "palindrom_wasm"
version = "0.1.0"
authors = ["lescuer97 <leoescuer@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
# serde = {version = "1.0", features = ["derive"]}
# tinyvec = "1.1.1"
 
#  necesario que el wasm-bindgen commandline sea de la misma version para funcionar correctamente
wasm-bindgen = {version = "0.2.70", features = ["serde-serialize"]}
# wee_alloc = {version = "0.4.5", optional = true}


[profile.release]
lto = true
opt-level = 'z' 